# chatwoot-webhook

./: .dockerignore  .env.example  README.md  chatwoot_create_new_message_consumer.py  chatwoot_open_conversation_status_consumer.py  conftest.py  consumer.py  docker-compose.yml  dockerfile  gunicorn_config.py  logger.py  main.py  pyproject.toml  settings.py
callback/: __init__.py
chatwoot/: __init__.py
tests/: test_chatwoot.py  test_kafka.py
webhook/: __init__.py  event.agent.json  event.bot.json  event.open.json  event.user.json
