[project]
name = "chatwoot-webhook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka>=2.10.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "gunicorn>=23.0.0",
    "kafka-python>=2.2.11",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.0",
    "requests>=2.32.4",
    "uvicorn>=0.34.3",
]
